# lsp-md

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  package.json  pnpm-lock.yaml  rustfmt.toml
client/: package.json  pnpm-lock.yaml
client/src/: extension.ts
examples/: read_md.rs  test.md
src/: chumsky.rs  completion.rs  jump_definition.rs  language_server.rs  lib.rs  main.rs  reference.rs  section.rs  sections.rs  semantic_token.rs
src/document/: bert.rs  document.rs  document_adapter.rs  document_v2.rs  extract_keywords.rs  find_by_keyword.rs  find_using_keyword.rs  format.rs  incremental_sync.rs  integration_tests.rs  keywords.rs  mod.rs  quick_edit.rs  similar_notes.rs  test_doc.rs  test_doc_v2.rs  util.rs
src/document/bert/: embedding.rs  encoder.rs  keywords.rs  mod.rs  model.rs
src/document/format/: format_naive.rs  format_treesitter.rs  formatter_v2.rs  mod.rs  processors.rs  tests.rs  treesitter.rs  util.rs
src/section/: embedding.rs  integration_tests.rs  mod.rs  sqlite.rs
