[package]
name = "nrs-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9"
env_logger = "0.10"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
anyhow = "1"
regex = "1"
rusqlite = "0.29"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rust-bert = "0.21"
tch = "0.13"
